Definition of getWorkflowProgress (v2)
